[fix] logo and overflow

--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -1,6 +1,6 @@
 .header{
   background-color: #FF6900 ;
-  height: 70px;
+  height: 50px;
   box-shadow: 0px 0px 10px 0px #FF6900;
   z-index: 4;
   position: fixed;
